--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^18.2.45",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.2",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
-    "typescript": "^5.3.3",
     "vite": "^5.0.10"
   },
   "scripts": {
@@ -25,5 +26,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.46",
+    "typescript": "^5.3.3"
   }
 }
