Add Cathegory controler mockup

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProjectConnectionString": "Server=;Database=;user id=;password="
+  }
 }
