--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,11 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-   "AllowedHosts": "*",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "ProjectConnectionString": "Server=;Database=;user id=;password="
   }
