--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProjectConnectionString": "Server=;Database=;user id=;password="
+    "ProjectConnectionString": "Server=localhost;User ID=root;Password=toor;Database=ekospoj"
   }
 }
